--- a/Face_mask_and_social_distancing_detection.ipynb
+++ b/Face_mask_and_social_distancing_detection.ipynb
@@ -6,8 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1NjtbuKIII7lWx4TvEaxXxhQYtxzolwiW",
-      "authorship_tag": "ABX9TyMOJjhDNnZl8g94cwBuBXYN",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPQlo3M9pA8U7S/J3rpMDqz"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +18,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Priyanka06yadav/Deep_Learning/blob/main/Face_mask_and_social_distancing_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 70,
@@ -363,19 +352,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 337
         },
-        "outputId": "f3ea7883-7494-4bcf-fc66-5432f0344811"
+        "outputId": "5f024c46-7c7d-4de3-c32f-ee5175861c54"
       },
-      "execution_count": 92,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7b284cd768c0>"
+              "<matplotlib.image.AxesImage at 0x7b284ccdbb50>"
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 100
         },
         {
           "output_type": "display_data",
@@ -399,7 +388,7 @@
       "metadata": {
         "id": "XB_qrS0Xsxg2"
       },
-      "execution_count": 93,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -420,7 +409,8 @@
         "        crop = cv2.resize(crop,(128,128))\n",
         "        crop = np.reshape(crop,[1,128,128,3])/255.0\n",
         "        mask_result = model.predict(crop)\n",
-        "        cv2.putText(new_img,mask_label[mask_result.argmax()],(x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.5,dist_label[label[i]],2)\n",
+        "        cv2.putText(new_img,mask_label[mask_result.argmax()],\n",
+        "        (x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.5,dist_label[label[i]],2)\n",
         "        cv2.rectangle(new_img,(x,y),(x+w,y+h),dist_label[label[i]],1)\n",
         "    plt.figure(figsize=(5,5))\n",
         "    plt.imshow(new_img)\n",
@@ -433,18 +423,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 373
         },
-        "id": "5-B1ujpsnarM",
-        "outputId": "54c43b45-f359-4815-899d-65167943e971"
+        "id": "aNi4-TRgr7sp",
+        "outputId": "d4cefb79-c440-431a-ee5b-b5bf3252b39d"
       },
-      "execution_count": 94,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 28ms/step\n",
-            "1/1 [==============================] - 0s 28ms/step\n",
-            "1/1 [==============================] - 0s 28ms/step\n"
+            "1/1 [==============================] - 0s 21ms/step\n",
+            "1/1 [==============================] - 0s 19ms/step\n",
+            "1/1 [==============================] - 0s 23ms/step\n"
           ]
         },
         {
@@ -463,7 +453,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "aNi4-TRgr7sp"
+        "id": "Oyf9AmZ6w9V9"
       },
       "execution_count": null,
       "outputs": []
